<resources>
    <string name="app_name">JujuyTourism</string>
    <string name="txtButtonWhatToDo">What to Do</string>
    <string name="txtButtonDestinations">Destinations</string>
    <string name="txtButtonCelebrations">Celebrations</string>
    <string name="txtButtonInformation">Information</string>
    <string name="txtTextViewPunaTitle">Puna</string>
    <string name="txtTextViewRavineTitle">Humahuaca Ravine</string>
    <string name="txtTextViewRavineDescription">The Quebrada de Humahuaca, an extensive mountainous valley with an asymmetric profile 155 kilometers long that runs in a North-South direction, is located in the extreme northwest of the Argentine Republic, in the Northern Argentine region. It constitutes a heritage system with exceptional characteristics.</string>
    <string name="txtTextViewPunaDescription">The immensity and splendor are combined with the clear sky and pure air. The Puna offers beautiful landscapes of salt flats, steppes, high plateaus and lagoons surrounded by mountains, such as Pozuelos, located at 3,600 meters above sea level. This lagoon was declared a Biosphere Reserve and its main treasure is made up of the large number of birds that live in its surroundings. Among its birdlife are three different species of flamingos and parinas. The solitude and aridity of this "high-altitude desert" is interrupted from time to time by small oases that, with their biological diversity, nuance the monotony of the landscape.</string>
    <string name="txtTextViewPunaDescription2">This lagoon was declared a Biosphere Reserve and its main treasure is made up of the large number of birds that live in its surroundings. Among its birdlife are three different species of flamingos and parinas. The solitude and aridity of this "high-altitude desert" is interrupted from time to time by small oases that, with their biological diversity, nuance the monotony of the landscape.</string>
    <string name="txtTextViewValleyTitle">Valley</string>
    <string name="txtTextViewValleyDescription">From the different viewpoints, such as Alto la Viña or Cristo de la Hermandad, located on Las Rosas Hill, you can contemplate the extraordinary beauty of San Salvador de Jujuy. The city itself shows deep contrasts between colonial and modern styles dispersed in the narrow streets, which tell the story of a thriving town, it houses numerous historical buildings, which constitute the living testimony of a glorious past: the Cathedral Church, with its pulpit laminated in gold; the Government House, custodian of the Flag bequeathed by General Manuel Belgrano in the patriotic feat of the Jujeño Exodus; the Cabildo; The Historical and Archaeological Museums and the San Francisco Church are some witnesses of Jujuy\'s identity.</string>
    <string name="txtTextViewTungasTitle">Yungas</string>
    <string name="txtTextViewYungasDescription">Its main reference, the Calilegua National Park, with its 76,306 hectares. of cloud forest, is one of the protected environments with the greatest biodiversity in northern Argentina, together with the Las Lancitas Provincial Reserve. Some preserved animal species in serious danger of extinction, such as the yaguareté, the huemul and the river otter, mix among the leafy majesty of its vegetation with a great variety of tree species (cedar, tipa, cebil, yellowwood, etc. .) that invites mystery and wonder.</string>
    <string name="txtTextViewMainTitle">Destinations</string>
    <string name="txtButtonMoreInfo">More Info</string>
    <string name="txtTextViewWTDMainTitle">What To Do</string>
    <string name="txtTextViewCultureTitle">Culture Tourism</string>
    <string name="txtTextViewCultureDescription">You will find in Jujuy a lot of cultural attractions. In 2003, the Quebrada de Humahuaca was declared a World Heritage Site by UNESCO in the Cultural Landscape category.</string>
    <string name="txtTextViewFoodTitle">Food and Wine</string>
    <string name="txtTextViewFoodDescription">We invite you to try the empanadas, tamales and humitas, the soups and spicy dishes, the locro, the calapurca, the tijtincha and the mote with chicharrón. Chili peppers, cane honey, charqui, anchi, mazamorra, capias, walnuts and peanuts. Multicolored potatoes, corn and quinoas. The geese, the ollucos, the chuño and the tunta. The salt of our salt flats, the cayote, the quirquiña, the rica rica, muña muña, chamomile, the roses and the cardón flower, the api and the carob. Citrus fruits, tropical fruits from the jungles, chilto, quesillo and goat cheese, patay, tuna and chañar syrup, basil, cumin, paprika and molle pepper. Dates, olives and their oil. The llama, the goat and the lamb. The aroma of the tortillas fresh from the clay oven, the stoves and their firewood, the smoked foods, the embers and the clay pots that contain the secrets of this ancient land.</string>
    <string name="txtTextViewAdventureTitle">Adventure</string>
    <string name="txtTextViewAdventureDescription">Jujuy is a destination full of nature where you can explore different natural environments within a short distance of each other.  Its regions -Puna, Quebrada, Valleys and Yungas- provide magical settings for the practice of incredibly rewarding activities. Be part of an authentic adventure by choosing the activity that you enjoy the most. We invite you to meet our duly authorized tourist service providers.</string>
    <string name="txtTextViewUnmissableTitle">Unmissable</string>
    <string name="txtTextViewUnmissableDesc">Places, walks and experiences that you should not miss on your next visit to Jujuy: \n- Pucará de Tilcara\n- Camino del Inca\n- Potrero de Yala\n- Valle de la luna</string>
    <string name="txtTextViewCelebrationsMainTitle">Celebrations</string>
    <string name="txtTextViewErmitas">Ermitas</string>
    <string name="txtTextViewNautic">Nautic Pilgrimage</string>
    <string name="txtTextViewWhiteRiver">White River Pilgrimage</string>
    <string name="txtTextViewManger">Mangers</string>
</resources>